--- a/style.css
+++ b/style.css
@@ -248,9 +248,15 @@ section{
 .section_container{
     gap: 4rem;
     height: 80%;
+    display: flex;
 }
-.section-pic-container{
+.section_pic-container{
     height: 400px;
-    width: 00px;
+    width: 400px;
     margin: auto 0;
 }
+/*EXPERIENCE SECTION*/
+#experience{
+    position: relative;
+}
+
