--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 }
 body{
     font-family: 'Poppins', sans-serif;
+    background-color: rgb(242, 237, 237);
 }
 html{
     scroll-behavior: smooth;
@@ -237,12 +238,13 @@ section{
 }
 .details-container{
     padding: 1.5rem;
-    flex: 1;
+    flex: 2;
     background: white;
     border-radius: 2rem;
     border: rgb(53,53,53) 0.3rem solid;
     border-color:rbg(163,163,163) ;
     text-align: center;
+   
 
 }
 .section_container{
@@ -259,4 +261,94 @@ section{
 #experience{
     position: relative;
 }
+.experience-sub-title{
+    color: rgb(85,85,85);
+    font-weight: 1600;
+    font-size: 1.75rem;
+    margin-bottom: 2rem;
+    
+}
+.experience-details-container{
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+}
+.article-container{
+    display: flex;
+    text-align: flex;
+    flex-wrap: wrap;
+    gap: 2.5rem;
+    justify-content: space-around;
+    
+}
+article{
+    display: flex;
+    width: 10rem;
+    justify-content: space-around;
+    gap: 0.5rem;
+}
+article.icon{
+    cursor: default;
+}
+/*PROJECT SECTION*/
+#projects{
+    position: relative;
+}
+.color-container{
+    border-color: rgb(163,163,163);
+    background: rgb(250,250,250);
+}
+.project-img{
+    border-radius: 5rem;
+    width: 180px;
+    height: 180px;
+}
+.project-title{
+    margin: 1rem;
+    color: black;
+}
+.project-btn{
+    color: black;
+    border-color: rgb(163,163,163);
+}
+/*CONTACT*/
+#contact{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    height: 70vh;
+}
+.contact-info-upper-container{
+    display: flex;
+    justify-content: center;
+    border-radius: 2rem;
+    border: rgb(53,53,53)0.3rem solid;
+    border-color: rgb(163,163,163);
+    background: rgb(250,250,250);
+}
+.contact-info-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0.5rem;
+    margin: 1rem;
+}
+.contact-info-container p{
+    font-size: large;
+}
+.context-icon{
+    cursor: default;
+}
+.email-icon{
+    height: 2.5rem;
+}
+/*FOOTER*/
+footer{
+    height: 26vh;
+    margin: 0.1rem;
+}
+footer p{
+    text-align: center;
+}
+
 
