--- a/style.css
+++ b/style.css
@@ -136,6 +136,7 @@ section{
 /*PROFILE SECTION*/
 #profile{
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     gap: 5rem;
     height: 80vh;
